[gd_scene load_steps=6 format=3 uid="uid://btxni68ipnmdx"]

[ext_resource type="Script" path="res://assets/main/main.gd" id="1_awvlw"]
[ext_resource type="PackedScene" uid="uid://qpedvr1uwrji" path="res://assets/main_menu/main_menu.tscn" id="1_hi0c4"]
[ext_resource type="PackedScene" uid="uid://caoqyrbswv48j" path="res://assets/settings_menu/settings_menu.tscn" id="2_rs4ww"]
[ext_resource type="PackedScene" uid="uid://vxct5up0qat6" path="res://assets/game/game.tscn" id="2_vav7n"]
[ext_resource type="PackedScene" uid="uid://5strikbrm5oi" path="res://assets/credits/credits.tscn" id="3_puohy"]

[node name="Main" type="Node2D"]
script = ExtResource("1_awvlw")

[node name="MainMenu" parent="." instance=ExtResource("1_hi0c4")]
metadata/_edit_lock_ = true

[node name="SettingsMenu" parent="." instance=ExtResource("2_rs4ww")]
visible = false
metadata/_edit_lock_ = true

[node name="Game" parent="." instance=ExtResource("2_vav7n")]
visible = false
metadata/_edit_lock_ = true

[node name="Credits" parent="." instance=ExtResource("3_puohy")]
visible = false
metadata/_edit_lock_ = true

[connection signal="game_start" from="MainMenu" to="." method="_on_main_menu_game_start"]
[connection signal="open_settings" from="MainMenu" to="." method="_on_main_menu_open_settings"]
[connection signal="done" from="SettingsMenu" to="." method="_on_settings_menu_done"]
